manifests/prod/rustfs/EndpointSlice-rustfs.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.83.142.17
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: rustfs
  name: rustfs
  namespace: rustfs
ports:
  - name: http
    port: 9001
    protocol: TCP
