manifests/prod/rustfs/Service-rustfs.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustfs
  namespace: rustfs
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9001
  type: ClusterIP
