manifests/prod/rustfs/Ingress-rustfs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: k3s-lan-ca
    gethomepage.dev/description: rustfs web console
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: DevOps
    gethomepage.dev/icon: mdi-database
    gethomepage.dev/name: rustfs
    gethomepage.dev/siteMonitor: http://rustfs.rustfs.svc.cluster.local/rustfs/console
  name: rustfs
  namespace: rustfs
spec:
  ingressClassName: traefik
  rules:
    - host: rustfs.k3s.lan
      http:
        paths:
          - backend:
              service:
                name: rustfs
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - rustfs.k3s.lan
      secretName: rustfs-tls
